# cardano-node-emulator

./: CODEOWNERS  CONTRIBUTING.adoc  CONTRIBUTING.md  GOVERNANCE.md  README.adoc  README.md  SUPPORT.md  cabal.project  critical_modules.txt  exposed_apis.txt  flake.nix  test_generators.txt
cardano-node-emulator/: CHANGELOG.md  cardano-node-emulator.cabal
cardano-node-emulator/app/: Main.hs
cardano-node-emulator/src/Cardano/Node/: Emulator.hs
cardano-node-emulator/src/Cardano/Node/Emulator/: API.hs  Generators.hs  LogMessages.hs  Test.hs
cardano-node-emulator/src/Cardano/Node/Emulator/Internal/: API.hs  Node.hs
cardano-node-emulator/src/Cardano/Node/Emulator/Internal/Node/: Chain.hs  Fee.hs  Params.hs  TimeSlot.hs  Validation.hs
cardano-node-emulator/src/Cardano/Node/Emulator/Test/: Coverage.hs  NoLockedFunds.hs
cardano-node-emulator/test/: Spec.hs  ValidationSpec.hs
cardano-node-emulator/test/Cardano/Node/Emulator/: GeneratorsSpec.hs  MTLSpec.hs
cardano-node-emulator/test/Cardano/Node/Emulator/golden/: logs - payToAddress.txt
cardano-node-emulator/test/Plutus/CIP1694/: Scripts.hs  Test.hs  alonzo-babbage-test-genesis.json  conway-babbage-test-genesis.json
cardano-node-emulator/test/Plutus/Example/: Game.hs  GameSpec.hs
cardano-node-emulator/test/Plutus/Examples/: Escrow.hs  EscrowSpec.hs  Game.hs  GameSpec.hs
cardano-node-socket-emulator/: cardano-node-socket-emulator.cabal
doc/: duplicate-input-validation.adoc
freer-extras/: freer-extras.cabal
nix/: cabal-project.nix  formatters.nix  haskell.nix  outputs.nix  project.nix  shell.nix
(+105 files in other folders)
